# ATCS

./: .gitattributes  .gitignore  Cargo.toml  README.md  atcheckstyleIntelliJ.xml  config.txt  genwav.ipynb  image_rec_sm.net  netparse.py  network.net  network2.net  rustfmt.toml  something.txt  validate.txt
ast/: fib.txt  parserTest6.txt
chessnn/: audiogen.py  audiogen_train.py  chessgui.py  custom_transform.py  rmsnorm.py  test.py  train.py
chessnn/llm/: bpe.cpp  compile_messages.py  custom_transform.py  language.py
cpp/: CMakeLists.txt  lib.hpp  main.cpp  transformer.hpp
dataset/: decode.py  proc.py  train.data  validate.data
jflex/: JFlexScannerTemplate.flex  Scanner.java  Scannerabb.java  dfa-big.dot  dfa-min.dot  nfa.dot  out.json
jvm/: CMakeLists.txt  main.cpp
paper/: fig1.gv  main.typ  template.typ  test.bib
paper 2/: bib.bib  main.typ  template.typ
parser/: cursedTest.txt  parserTest0.txt  parserTest1.txt  parserTest2.txt
scanner/: CustomMain.java  Scanner.java  ScannerTest.txt  scannerTestAdvanced.txt
src/: config.rs  convolve.rs  main.rs  network.rs  serialize.rs
src/ast/: ArrayLiteral.java  BinOp.java  Block.java  BreakException.java  ContinueException.java  Environment.java  Expression.java  ForLoop.java  NamedExpression.java  NamedOperatorSAM.java  OperatorSAM.java  ReadLn.java  Statement.java  WhileLoop.java
src/parser/: BoxedValue.java  CursedArray.java  Parser.java  PascalArray.java
src/scanner/: CustomMain.java  ScanErrorException.java  Scanner.java  ScannerTester.java  Token.java
src/token/: EOFToken.java  IdToken.java  (+3 more)
